2009-11-11  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Unreviewed buildbot fix.

        Export a method to the DRT to know if the document has a
        document element.

        * Api/qwebframe.cpp:
        (qt_drt_hasDocumentElement):

2009-11-11  Liang QI  <liang.qi@nokia.com>

        [Qt] Fix tst_qwebpage and tst_qwebframe compilation on Symbian.

        * tests/qwebframe/qwebframe.pro:
        * tests/qwebframe/tst_qwebframe.cpp:
        * tests/qwebpage/qwebpage.pro:
        * tests/qwebpage/tst_qwebpage.cpp:

2009-11-11  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Simon Hausmann.

        Fix a crash in the layout test plugins/document-open.html

        * Api/qwebframe.cpp:
        (QWebFrame::toPlainText):

2009-11-11  Warwick Allison  <warwick.allison@nokia.com>, Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Tor Arne Vestbø.

        [Qt] Regression: Preserve the parent of plugin objects when using
        QtWebKit with only a QWebPage.

        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::createPlugin): Don't reparent
        plugins to 0.
        * tests/qwebpage/tst_qwebpage.cpp:
        (PluginCounterPage::PluginCounterPage): Initialize m_pluginParent to 0.
        (PluginCounterPage::~PluginCounterPage): Delete the plugin parent later
        (after the page)
        (PluginTracerPage::createPlugin): Assign a dummy parent to the plugin.
        (PluginTracerPage::PluginTracerPage): Set up the plugin parent.
        (tst_QWebPage::createViewlessPlugin): Verify that for viewless pages the
        plugin parent remains unchanged.

2009-11-11  David Boddie  <dboddie@trolltech.com>

        [Qt] Doc: Added internal or hidden placeholder documentation.

        * Api/qwebpage.cpp:

2009-11-11  Martin Smith  <msmith@trolltech.com>

        [Qt] doc: Changed Trolltech to Nokia

        * Api/qwebview.cpp:

2009-11-11  Laszlo Gombos  <laszlo.1.gombos@nokia.com>
