@@ -158,15 +158,99 @@ QObject* QGraphicsWebViewPrivate::pluginParent() const
 
 /*!
     \class QGraphicsWebView
-    \brief The QGraphicsWebView class allows web content to be added to a GraphicsView.
+    \brief The QGraphicsWebView class allows Web content to be added to a GraphicsView.
     \since 4.6
 
-    A WebGraphicsItem renders web content based on a URL or set data.
+    An instance of this class renders Web content from a URL or supplied as data, using
+    features of the QtWebKit module.
 
-    If the width and height of the item is not set, they will
-    dynamically adjust to a size appropriate for the content.
-    This width may be large (eg. 980) for typical online web pages.
+    If the width and height of the item is not set, they will dynamically adjust to
+    a size appropriate for the content. This width may be large (e.g., 980 pixels or
+    more) for typical online Web pages.
+
+    \section1 Browser Features
+
+    Many of the functions, signals and properties provided by QWebView are also available
+    for this item, making it simple to adapt existing code to use QGraphicsWebView instead
+    of QWebView.
+
+    The item uses a QWebPage object to perform the rendering of Web content, and this can
+    be obtained with the page() function, enabling the document itself to be accessed and
+    modified.
+
+    As with QWebView, the item records the browsing history using a QWebHistory object,
+    accessible using the history() function. The QWebSettings object that defines the
+    configuration of the browser can be obtained with the settings() function, enabling
+    features like plugin support to be customized for each item.
+
+    \sa QWebView, QGraphicsTextItem
 */
+
+/*!
+    \fn void QGraphicsWebView::titleChanged(const QString &title)
+
+    This signal is emitted whenever the \a title of the main frame changes.
+
+    \sa title()
+*/
+
+/*!
+    \fn void QGraphicsWebView::urlChanged(const QUrl &url)
+
+    This signal is emitted when the \a url of the view changes.
+
+    \sa url(), load()
+*/
+
+/*!
+    \fn void QGraphicsWebView::statusChanged()
+
+    This signal is emitted when the status bar text is changed by the page.
+*/
+
+/*!
+    \fn void QGraphicsWebView::iconChanged()
+
+    This signal is emitted whenever the icon of the page is loaded or changes.
+
+    In order for icons to be loaded, you will need to set an icon database path
+    using QWebSettings::setIconDatabasePath().
+
+    \sa icon(), QWebSettings::setIconDatabasePath()
+*/
+
+/*!
+    \fn void QGraphicsWebView::loadStarted()
+
+    This signal is emitted when a new load of the page is started.
+
+    \sa progressChanged(), loadFinished()
+*/
+
+/*!
+    \fn void QGraphicsWebView::loadFinished(bool ok)
+
+    This signal is emitted when a load of the page is finished.
+    \a ok will indicate whether the load was successful or any error occurred.
+
+    \sa loadStarted()
+*/
+
+/*!
+    \fn void QGraphicsWebView::progressChanged(qreal progress)
+
+    This signal is emitted every time an element in the web page
+    completes loading and the overall loading progress advances.
+
+    This signal tracks the progress of all child frames.
+
+    The current value is provided by \a progress and scales from 0.0 to 1.0,
+    which is the default range of QProgressBar.
+
+    \sa loadStarted(), loadFinished()
+*/
+
+
 
 /*!
     Constructs an empty QGraphicsWebView with parent \a parent.
@@ -185,7 +269,7 @@ QGraphicsWebView::QGraphicsWebView(QGraphicsItem* parent)
 }
 
 /*!
-    Destroys the web graphicsitem.
+    Destroys the item.
 */
 QGraphicsWebView::~QGraphicsWebView()
 {
